Fix now-playing covers for old browsers (e.g. old iOS) that don't support CSS min() Issue #733

--- a/MaterialSkin/HTML/material/html/css/mobile.css
+++ b/MaterialSkin/HTML/material/html/css/mobile.css
@@ -18,18 +18,26 @@
 }
 
 /* For old browser's that dont support min() */
-/*
 @supports not (width: min(10px, 5vw)) {
  :root {
   --np-portrait-image-size:calc(100vw - (var(--np-image-border)*2));
+  --np-image-landscape-size:calc(50vw - (var(--np-image-border)*2));
+  --np-image-landscape-wide-height:50vw;
+  --np-image-landscape-wide-size:calc(50vw - (var(--np-image-border)*2));
  }
- @media (min-aspect-ratio: 68/100) {
+ @media (min-aspect-ratio: 50/100) {
   :root {
-   --np-portrait-image-size:calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + var(--bottom-toolbar-height) + 210px) - (var(--np-image-border)*2));
+   --np-portrait-image-size:calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + var(--bottom-toolbar-height) + 210px) - (var(--np-image-border)*6));
+  }
+ }
+ @media (min-aspect-ratio: 200/100) {
+  :root {
+   --np-image-landscape-size:calc(var(--np-image-landscape-height) - (var(--np-image-border)*2));
+   --np-image-landscape-wide-height:calc((var(--vh, 1vh)*100) - (var(--main-toolbar-height) + var(--bottom-toolbar-height)));
+   --np-image-landscape-wide-size:calc(var(--np-image-landscape-wide-height) - (var(--np-image-border)*2));
   }
  }
 }
-*/
 
 .subtoolbar {
  position:fixed;
